objects/Opportunity/fields/ACV_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>ACV_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ACV Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>