objects/Opportunity/fields/Annual_EBITDA__c.field-meta.xml
<CustomField>
    <fullName>Annual_EBITDA__c</fullName>
    <label>Annual EBITDA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>