objects/Opportunity/fields/Annual_Rev__c.field-meta.xml
<CustomField>
    <fullName>Annual_Rev__c</fullName>
    <inlineHelpText>When you enter a monetary amount you can use the shortcuts k, m, or b to indicate thousands, millions, or billions. For example, when you enter 50k it appears as 50,000</inlineHelpText>
    <label>Annual Rev</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>