objects/Opportunity/fields/Bid_Bond__c.field-meta.xml
<CustomField>
    <fullName>Bid_Bond__c</fullName>
    <label>Bid Bond</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>$20,000</fullName>
            </value>
            <value>
                <fullName>.</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>1%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>10% (also L&amp;M bond, performance bond, &amp; DRS guarantee bond)</fullName>
            </value>
            <value>
                <fullName>10% Bid Bond + P&amp;P</fullName>
            </value>
            <value>
                <fullName>10% NTE $20,000</fullName>
            </value>
            <value>
                <fullName>10% NTE $20K Bid Bond + Performance Bond</fullName>
            </value>
            <value>
                <fullName>10% of the bid, to a maximum of $20,000</fullName>
            </value>
            <value>
                <fullName>10%, NTE $20,000</fullName>
            </value>
            <value>
                <fullName>10%, max $20,000</fullName>
            </value>
            <value>
                <fullName>10000</fullName>
            </value>
            <value>
                <fullName>20 percent</fullName>
            </value>
            <value>
                <fullName>20,000</fullName>
            </value>
            <value>
                <fullName>20000</fullName>
            </value>
            <value>
                <fullName>5%</fullName>
            </value>
            <value>
                <fullName>5% Bid Bond + labor and materials/payment bond</fullName>
            </value>
            <value>
                <fullName>5% of Value</fullName>
            </value>
            <value>
                <fullName>5% of the Bid</fullName>
            </value>
            <value>
                <fullName>50% Performance Bond</fullName>
            </value>
            <value>
                <fullName>BID</fullName>
            </value>
            <value>
                <fullName>Bid Gaurantee</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>NONE</fullName>
            </value>
            <value>
                <fullName>Not needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>