objects/Opportunity/fields/Bid_Bond_Special_forms_provided__c.field-meta.xml
<CustomField>
    <fullName>Bid_Bond_Special_forms_provided__c</fullName>
    <label>Bonding Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>