objects/Opportunity/fields/Bid_Number_Title__c.field-meta.xml
<CustomField>
    <fullName>Bid_Number_Title__c</fullName>
    <label>Bid Number/ Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>