objects/Opportunity/fields/Bid_Results__c.field-meta.xml
<CustomField>
    <fullName>Bid_Results__c</fullName>
    <label>Bid Results</label>
    <type>TextArea</type>
</CustomField>