objects/Opportunity/fields/Bid_Site_Walk__c.field-meta.xml
<CustomField>
    <fullName>Bid_Site_Walk__c</fullName>
    <label>Bid Site Walk</label>
    <type>Date</type>
</CustomField>