objects/Opportunity/fields/Bid_Type__c.field-meta.xml
<CustomField>
    <fullName>Bid_Type__c</fullName>
    <label>Bid Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RSES Atlantic Bid</fullName>
            </value>
            <value>
                <fullName>RSES National Bid</fullName>
            </value>
            <value>
                <fullName>RSES Pacific Bid</fullName>
            </value>
            <value>
                <fullName>RSES Central Bid</fullName>
            </value>
            <value>
                <fullName>RSES Gulf Bid</fullName>
            </value>
            <value>
                <fullName>Onsite Services</fullName>
            </value>
            <value>
                <fullName>Total Waste Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>