objects/Opportunity/fields/CapEx_Required__c.field-meta.xml
<CustomField>
    <fullName>CapEx_Required__c</fullName>
    <label>CapEx Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>