objects/Opportunity/fields/Competitor_Lost_To__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Lost_To__c</fullName>
    <inlineHelpText>Enter the name of the competitor opportunity was lost to</inlineHelpText>
    <label>Competitor Lost To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>