objects/Opportunity/fields/Consent_of_Surety__c.field-meta.xml
<CustomField>
    <fullName>Consent_of_Surety__c</fullName>
    <label>Consent of Surety</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>