objects/Opportunity/fields/Date_of_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Next_Step__c</fullName>
    <description>https://acvenviro.lightning.force.com/lightning/r/Case/5008X00002KgKlgQAF/view</description>
    <label>Date of Next Step</label>
    <type>Date</type>
</CustomField>