objects/Opportunity/fields/Deal_Age__c.field-meta.xml
<CustomField>
    <fullName>Deal_Age__c</fullName>
    <formula>IF(
    IsClosed,
    Opportunity_Age__c + FLOOR(Stage_Closed_Set_Date__c - DATEVALUE(CreatedDate)),
    Opportunity_Age__c + FLOOR(TODAY() - DATEVALUE(CreatedDate))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>