objects/Opportunity/fields/Est_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Est_Profit_Margin__c</fullName>
    <label>EBIT / Operating Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>