objects/Opportunity/fields/Estimated_Service_Duration__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Service_Duration__c</fullName>
    <formula>CloseDate - Estimated_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Service Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>