objects/Opportunity/fields/Estimated_Service_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Service_End_Date__c</fullName>
    <description>US141843</description>
    <label>Estimated Service End Date</label>
    <type>Date</type>
</CustomField>