objects/Opportunity/fields/Estimated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Start_Date__c</fullName>
    <inlineHelpText>Enter the date you expect the project or service to begin</inlineHelpText>
    <label>Estimated Service Start Date</label>
    <type>Date</type>
</CustomField>