objects/Opportunity/fields/How_did_we_obtain_this_bid_opportunity__c.field-meta.xml
<CustomField>
    <fullName>How_did_we_obtain_this_bid_opportunity__c</fullName>
    <label>How did we obtain this bid opportunity?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent from customer direct to AE/PC</fullName>
            </value>
            <value>
                <fullName>AE/PC found opportunity</fullName>
            </value>
            <value>
                <fullName>Bid Subscription</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>