objects/Opportunity/fields/HQ_Location__c.field-meta.xml
<CustomField>
    <fullName>HQ_Location__c</fullName>
    <label>HQ Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>