objects/Opportunity/fields/Investment_Thesis_Attribute_s__c.field-meta.xml
<CustomField>
    <fullName>Investment_Thesis_Attribute_s__c</fullName>
    <label>Investment Thesis Attribute(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>