objects/Opportunity/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backhauls</fullName>
            </value>
            <value>
                <fullName>Dewatering &amp; Treatment</fullName>
            </value>
            <value>
                <fullName>Disposal - Haz Bulk</fullName>
            </value>
            <value>
                <fullName>Disposal - Haz Drum</fullName>
            </value>
            <value>
                <fullName>Disposal - NonHaz Bulk</fullName>
            </value>
            <value>
                <fullName>Disposal - NonHaz Drum</fullName>
            </value>
            <value>
                <fullName>Emergency Response</fullName>
            </value>
            <value>
                <fullName>ES Drum Management (LTL)</fullName>
            </value>
            <value>
                <fullName>ES Industrial Well</fullName>
            </value>
            <value>
                <fullName>ES Landfill</fullName>
            </value>
            <value>
                <fullName>ES Recycle</fullName>
            </value>
            <value>
                <fullName>ES Retail</fullName>
            </value>
            <value>
                <fullName>ES Thermal Reclamation</fullName>
            </value>
            <value>
                <fullName>ES Wastewater</fullName>
            </value>
            <value>
                <fullName>Field Services</fullName>
            </value>
            <value>
                <fullName>Household Hazardous Waste</fullName>
            </value>
            <value>
                <fullName>Hydroexcavation</fullName>
            </value>
            <value>
                <fullName>Industrial Cleaning</fullName>
            </value>
            <value>
                <fullName>Industrial - Nested</fullName>
            </value>
            <value>
                <fullName>Industrial - Shutdown/Turnaround</fullName>
            </value>
            <value>
                <fullName>Lab Pack</fullName>
            </value>
            <value>
                <fullName>Major Event</fullName>
            </value>
            <value>
                <fullName>Marine Services</fullName>
            </value>
            <value>
                <fullName>Onsite Services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Product Sales</fullName>
            </value>
            <value>
                <fullName>Rent Revenue</fullName>
            </value>
            <value>
                <fullName>Retail Petroleum Service</fullName>
            </value>
            <value>
                <fullName>Soil Remediation</fullName>
            </value>
            <value>
                <fullName>Solid Waste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>