objects/Opportunity/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Republic</fullName>
            </value>
            <value>
                <fullName>Ecoflo</fullName>
            </value>
            <value>
                <fullName>SAM.gov</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>