objects/Opportunity/fields/Length_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Contract__c</fullName>
    <label>Contract Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>