objects/Opportunity/fields/Line_of_Business_es_Desc__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business_es_Desc__c</fullName>
    <label>Line of Business(es) Desc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>