objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competitor - Logistical Advantage</fullName>
            </value>
            <value>
                <fullName>Competitor - Pricing</fullName>
            </value>
            <value>
                <fullName>Competitor - Technical</fullName>
            </value>
            <value>
                <fullName>Competitor - Unknown</fullName>
            </value>
            <value>
                <fullName>Expired - No Activity</fullName>
            </value>
            <value>
                <fullName>Subcontractor - Prime lost bid</fullName>
            </value>
            <value>
                <fullName>No Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>