objects/Opportunity/fields/MBE_WBE_Requirements__c.field-meta.xml
<CustomField>
    <fullName>MBE_WBE_Requirements__c</fullName>
    <label>Small / Diverse Spend Requirements</label>
    <length>250</length>
    <type>Text</type>
</CustomField>