objects/Opportunity/fields/No_Bid_Reason__c.field-meta.xml
<CustomField>
    <fullName>No_Bid_Reason__c</fullName>
    <label>No Bid Reason</label>
    <type>TextArea</type>
</CustomField>