objects/Opportunity/fields/obtain_this_bid_opportunity__c.field-meta.xml
<CustomField>
    <fullName>obtain_this_bid_opportunity__c</fullName>
    <label>Acquire Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>