objects/Opportunity/fields/Opp_CSID__c.field-meta.xml
<CustomField>
    <fullName>Opp_CSID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp CSID</label>
    <type>Text</type>
</CustomField>