objects/Opportunity/fields/Owner_BDD__c.field-meta.xml
<CustomField>
    <fullName>Owner_BDD__c</fullName>
    <formula>TEXT( Owner.BDD__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner BDD</label>
    <type>Text</type>
</CustomField>