objects/Opportunity/fields/Ownership_Description__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Description__c</fullName>
    <label>Ownership Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>