objects/Opportunity/fields/PFAS_or_AFFF__c.field-meta.xml
<CustomField>
    <fullName>PFAS_or_AFFF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this opportunity includes PFAS or AFFF</inlineHelpText>
    <label>PFAS or AFFF?</label>
    <type>Checkbox</type>
</CustomField>