objects/Opportunity/fields/Prevailing_Wage__c.field-meta.xml
<CustomField>
    <fullName>Prevailing_Wage__c</fullName>
    <label>Prevailing Wage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>