objects/Opportunity/fields/Proposal_Quote_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Quote_Submitted__c</fullName>
    <label>Proposal/Quote Submitted Date</label>
    <type>Date</type>
</CustomField>