objects/Opportunity/fields/Public_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Public_Lead_Source__c</fullName>
    <label>Public Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Envirobidnet</fullName>
            </value>
            <value>
                <fullName>BidNet Direct</fullName>
            </value>
            <value>
                <fullName>BidSync</fullName>
            </value>
            <value>
                <fullName>Governmentbids</fullName>
            </value>
            <value>
                <fullName>NYS Contract Reporter</fullName>
            </value>
            <value>
                <fullName>Bonfire</fullName>
            </value>
            <value>
                <fullName>State/County/City Portal</fullName>
            </value>
            <value>
                <fullName>Other – Not Listed</fullName>
            </value>
            <value>
                <fullName>Bid Ocean</fullName>
            </value>
            <value>
                <fullName>GSA ebuy</fullName>
            </value>
            <value>
                <fullName>SAM.gov</fullName>
            </value>
            <value>
                <fullName>CIS- Construction Information Systems, Inc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>