objects/Opportunity/fields/Public_Lead_Source_Refrence__c.field-meta.xml
<CustomField>
    <fullName>Public_Lead_Source_Refrence__c</fullName>
    <label>Public Lead Source Reference</label>
    <type>TextArea</type>
</CustomField>