objects/Opportunity/fields/Questions_Due__c.field-meta.xml
<CustomField>
    <fullName>Questions_Due__c</fullName>
    <label>Questions Due</label>
    <type>Date</type>
</CustomField>