objects/Opportunity/fields/Quote_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Follow_Up_Date__c</fullName>
    <label>Quote Follow Up Date</label>
    <type>Date</type>
</CustomField>