objects/Opportunity/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <label>Quote #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>