objects/Opportunity/fields/Quote_Order__c.field-meta.xml
<CustomField>
    <fullName>Quote_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote/Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Sales_Order__c.Bill_to_Customer_No__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>