objects/Opportunity/fields/Referring_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Referring_Vertical__c</fullName>
    <label>Cross Sell Referring Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACV</fullName>
            </value>
            <value>
                <fullName>Ecoflo</fullName>
            </value>
            <value>
                <fullName>RSG Environmental Services – TX</fullName>
            </value>
            <value>
                <fullName>RSG Field Sales</fullName>
            </value>
            <value>
                <fullName>RSG Manufacturing/Special Waste</fullName>
            </value>
            <value>
                <fullName>RSG Municipal</fullName>
            </value>
            <value>
                <fullName>RSG National Accounts</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>USE</fullName>
            </value>
            <value>
                <fullName>RSG Lead Program</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>