objects/Opportunity/fields/Report_Runner_PM__c.field-meta.xml
<CustomField>
    <fullName>Report_Runner_PM__c</fullName>
    <formula>$User.Id =  Internal_Partner__r.User__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Runner PM</label>
    <type>Checkbox</type>
</CustomField>