objects/Opportunity/fields/Republic_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Republic_Rep_Email__c</fullName>
    <label>Cross Sell Referring Rep Email</label>
    <type>Email</type>
</CustomField>