objects/Opportunity/fields/Republic_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Republic_Rep_Name__c</fullName>
    <label>Cross Sell Referring Rep</label>
    <length>25</length>
    <type>Text</type>
</CustomField>