objects/Opportunity/fields/Sales_Area__c.field-meta.xml
<CustomField>
    <fullName>Sales_Area__c</fullName>
    <description>This field is used to populate the Opportunity Owner's Sales Area</description>
    <label>Sales Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>