objects/Opportunity/fields/Scope_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Work__c</fullName>
    <label>Scope of Work</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>