objects/Opportunity/fields/Service_Center_Facility__c.field-meta.xml
<CustomField>
    <fullName>Service_Center_Facility__c</fullName>
    <label>Service Center/Facility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aston, PA</fullName>
            </value>
            <value>
                <fullName>Baltimore, MD</fullName>
            </value>
            <value>
                <fullName>Clayton, NJ</fullName>
            </value>
            <value>
                <fullName>Envirotech</fullName>
            </value>
            <value>
                <fullName>Facility - Deep Green</fullName>
            </value>
            <value>
                <fullName>Facility - Elizabeth</fullName>
            </value>
            <value>
                <fullName>Facility - Lewisberry</fullName>
            </value>
            <value>
                <fullName>Hydro - Indiana</fullName>
            </value>
            <value>
                <fullName>Hydro - MD and VA</fullName>
            </value>
            <value>
                <fullName>Hydro - PA and NJ</fullName>
            </value>
            <value>
                <fullName>Hydro - Wisconsin</fullName>
            </value>
            <value>
                <fullName>Major Events</fullName>
            </value>
            <value>
                <fullName>Metro - Brooklyn, NY</fullName>
            </value>
            <value>
                <fullName>Metro - Elizabeth, NJ</fullName>
            </value>
            <value>
                <fullName>Metro - Rahway</fullName>
            </value>
            <value>
                <fullName>Metro - Transportation</fullName>
            </value>
            <value>
                <fullName>N. PA - Harrisburg</fullName>
            </value>
            <value>
                <fullName>N. PA - New Castle</fullName>
            </value>
            <value>
                <fullName>N. PA - Williamsport</fullName>
            </value>
            <value>
                <fullName>New England - Maine</fullName>
            </value>
            <value>
                <fullName>New England - Mass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>