objects/Opportunity/fields/Servicing_Area__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Area__c</fullName>
    <formula>TEXT(Service_Center__r.Region__r.Area_Name__c)</formula>
    <label>Servicing Area</label>
    <type>Text</type>
</CustomField>